fix: modified contrast for breadcrumbs and buttons
- Modified colors for higher contrast per a11y findings

related to #46

--- a/app/styles/custom/scss/_variables.scss
+++ b/app/styles/custom/scss/_variables.scss
@@ -803,9 +803,9 @@ $breadcrumb-padding-horizontal: 15px !default;
 //** Breadcrumb background color
 $breadcrumb-bg:                 #f5f5f5 !default;
 //** Breadcrumb text color
-$breadcrumb-color:              #ccc !default;
+$breadcrumb-color:              $gray-darker !default;
 //** Text color of current page in the breadcrumb
-$breadcrumb-active-color:       $gray-light !default;
+$breadcrumb-active-color:       $gray-darker !default;
 //** Textual separator for between breadcrumb elements
 $breadcrumb-separator:          "/" !default;
 
